# basic_api

./: .gitignore  README.md  docker-compose.yml
conf/: nginx.conf
server/: .env_test  Dockerfile  pyproject.toml  pyvenv.cfg  requirements.txt
server/src/: config.py  conftest.py  main.py  main_old.py  main_test.py  populate_database.py  test_main.py
server/src/dal/: base.py  sale.py  session.py  user.py
server/src/model/: sale.py  session.py  user.py
server/src/router/: sale.py  user.py
